--- a/index.html
+++ b/index.html
@@ -84,7 +84,17 @@
 								<p>This is a Distributed Application for a smart contract allow player to bet on the coin flip. Block Chain: Ethereum on Ganache Backend: Solidity, Truffle, Web3 Frontend: Javascript, Jquery, HTML</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/kwokkawai/dapp-coinflip" class="button">Full Story</a></li>
-								</ul>																																									
+								</ul>	
+								<header>
+									<span class="date">Oct 26, 2021</span>
+									<h2><a href="#">IoT Signals to Cloud<br />
+										Home Temperature and Humidity Display on Cloud</a></h2>
+								</header>
+								<a href="https://github.com/kwokkawai/my_iot" class="image fit"><img src="images/IoT.png" alt="" /></a>
+								<p>Detect the temperature and humidity from DHT22 every 2 minutes. The reading is sent to Initial State for display</p>
+								<ul class="actions special">
+									<li><a href="ttps://github.com/kwokkawai/my_iot" class="button">Full Story</a></li>
+								</ul>																																																
 							</article>
 						<!-- Contact -->
 							<article id="contact">
